syntax = "proto3";

package met;

option go_package = "internal/service/proto";


message Metric {
  string id = 1;
  string type = 2;
  int64 delta = 3;
  double value = 4;
}

message InsertBatchRequest {
  repeated Metric metrics = 1;
  int32 amount = 2;
}

message InsertBatchResponse {
  uint32 status_code = 1;
  string message = 2;
}

service MetricService {
    rpc InsertBatch(InsertBatchRequest) returns (InsertBatchResponse);
}